* Verwende nun das Paket pictexwd (anstatt pictex), da immer noch Fehler der Art   `No room for a new \dimen' (trotz des Paketes m-pictex), autraten. Nun geht es   (jedenfalls bei mir.)
* Alle "Overfull Boxes" entfernt



git-svn-id: https://svn.lug-jena.de/uni-skripte@217 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -19,8 +19,8 @@
 \usepackage{delarray}
 \usepackage{epsfig}
 \usepackage{boxedminipage}
-\usepackage{pictex,color}
-\usepackage{m-pictex}        % Dieses Paket behebt einige Probleme mit
+\usepackage{pictexwd,color}
+%\usepackage{m-pictex}        % Dieses Paket behebt einige Probleme mit
                              % Registern von von pictex; s. DE-TeX-FAQ 6.4.5
 \usepackage{amssymb}
 \usepackage[intlimits]{amsmath}
@@ -95,12 +95,14 @@
   Verweis die Internetadresse \url{http://www.minet.uni-jena.de/~joergs/skripte/}
   des Projekts enthalten ist.
 
-  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
+  \sloppy Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
   vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist unter
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/pdf/} verfügbar.
-
+  \url{http://www.minet.uni-jena.de/~joergs/skripte/pdf/} ist eine
+  (mögliche) aktuellere Ausgabe verfügbar.
+  
   Jeder ist dazu aufgerufen Verbesserungen, Erweiterungen und
-  Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
+  Feh\-ler\-kor\-rek\-tu\-ren für das \linebreak[4] Skript ein\-zu\-reichen
+  bzw. zu melden oder selbst
   einzupflegen -- einfach eine eMail an die
   \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
   \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
@@ -134,8 +136,9 @@ von Zufallsexperimenten und von zufälligen Erscheinungen.
 \begin{itemize}
         \item{kein philosophischer Ansatz}
         \item{Modell vs. Realität? (nie 100\%)}
-        \item{Versuch mit zufälligem Ergebnis $\widehat{=}$ bei identischer Versuchsanordnung
-                                sind unterschiedliche Ergebnisse möglich (nicht vorhersehbar)}
+        \item{Versuch mit zufälligem Ergebnis $\widehat{=}$ bei identischer
+           Versuchsanordnung sind verschiedene Ergebnisse möglich
+           (nicht vorhersehbar)}
         \item{\index{Zufallsexperiment}Zufallsexperiment $\widehat{=}$ gezieltes Experiment und Aussagen über den wahren
                                 Sachverhalt zu bekommen.\\
                                 Beobachtung = Stichprobe (Statistisches Experiment)}
@@ -187,7 +190,8 @@ von Zufallsexperimenten und von zufälligen Erscheinungen.
         \begin{enumerate}
                 \item{Einmaliges Würfeln:\\
                                         $\Omega=\left\{1,\dots,6\right\}$ \quad 
-                                        möglich wäre $\Omega=\left\{1,2,3,\dots\right\}$ oder $\Omega=\mathbb{R}$, 
+                                        möglich wäre $\Omega=\left\{1,2,3,\dots\right\}$ oder
+                                        $\Omega=\mathbb{R}$, \\
                                         \quad \underline{nicht möglich $\Omega=\left\{1,\dots,5\right\}$}}
                 \item{n-maliges Würfeln:\\
                                         $\Omega=\left\{1,\dots,6\right\}^n=\left\{\omega=(\omega_1,\dots,\omega_n):
@@ -283,7 +287,7 @@ $\mathbb{P}(A)=1$, d.h. $A$ tritt sicher ein
 
 $\mathbb{P}(A)\widehat{=}$ mathematische Abstraktion für den Grenzwert der relativen Häufigkeiten $r_n$\\
 \index{Häufigkeit!relative}
-n-unabhängige Versuche:\\
+n-unabhängige Versuche:
 \begin{gather*}
   r_n:=\frac{\sharp\text{ Versuche, bei denen } A \text{ eingetreten ist}}{n}
 \end{gather*}
@@ -335,7 +339,7 @@ $\Omega$ "`groß"' z.B. $\Omega=\mathbb{R}$, dann existiert keine solche Abbildun
 Teilsystem $\A\subseteq \mathfrak{R}(\Omega)$ und man
 definiert $\mathbb{P}(A)$ nunmehr nur für Mengen $A \in \A$,
 d.h. nicht alle Ereignisse besitzen eine Wahrscheinlichkeit ihres Eintretens.\\
-$\A$ sollte die "`wichtigen"' Teilmengen enthalten, z.B. alle Intervalle, Punkte usw.
+$\A$ sollte die "`wichtigen"' Teilmengen enthalten, z.B. alle Intervalle, Punkte usw.\\
 \begin{Def}
         $\A$ heißt $\sigma$-Algebra, wenn
         \begin{enumerate}
@@ -561,7 +565,7 @@ oder  $D=\lb\omega_1,\omega_2,\ldots\rb$, so daß $\p(D)=1$. Dann heißt $D$ \unde
 \index{Einpunktverteilung}
 \index{Zweipunktverteilung}
 \index{Gleichverteilung!diskret}
-\index{klassische Verteilung|see{Gleichverteilung}}
+\index{klass. Verteilung|see{Gleichverteilung}}
 \begin{enumerate}
         \item{\underline{Einpunktverteilung:}\\
         \[
@@ -851,7 +855,7 @@ Suchen: $\p([a,b])=$ ?
   \end{itemize}
 \end{Def}
 \emph{Problem:} $\Omega=\mathbb{R}$, $\sigma$-Algebra ? $\p([a,b])$
-definiert. Was ist $\p(A)=$ ? für $A\in \A$
+definiert. Was ist $\p(A)=$ ? für $A\in \A$\\
 \setcounter{Bsp}{0}
 \begin{Bsp}
   \[ p(x) := \left\{ \begin{array}{r@{\quad:\quad}l}
@@ -1060,7 +1064,7 @@ Ein stetiges Wahrscheinlichkeitsmaß $\p$ lässt sich eindeutig von $\E$ auf
 %    \label{fig:def15}      
 %\end{figure}
   Gesucht ist die Wahrscheinlichkeit, dass die Nadel eine Gerade
-  (Linie) schneidet.
+  (Linie) schneidet.\\[0.2cm]
   \begin{tabular}{crr}
 %Abbildung einfügen 
     & \begin{tabular}{l}
@@ -1072,7 +1076,7 @@ Ein stetiges Wahrscheinlichkeitsmaß $\p$ lässt sich eindeutig von $\E$ auf
         $-\frac{\pi}{2} \leq \theta \leq +\frac{\pi}{2}$\\
         $\theta \in [-\frac{\pi}{2},\frac{\pi}{2}]$
       \end{tabular}
-  \end{tabular}
+  \end{tabular}\\[0.2cm]
   Zufälliges Werfen der Nadel bedeutet:\\
   Wähle Punkt $(x,\theta) \in [0,1]\times
   [-\frac{\pi}{2},\frac{\pi}{2}]$ entsprechend der
@@ -1391,7 +1395,7 @@ Ein stetiges Wahrscheinlichkeitsmaß $\p$ lässt sich eindeutig von $\E$ auf
                     =\p(A\setminus A\cap B)=\p(A\cap B^C)$}
         \end{enumerate}
     Wir wissen: $B^C,A$ unabhängig $\to B^C,A^C$ unabhängig (analog zu
-    obigem Beweis!)
+    obigem Beweis!)\\
     \begin{Bsp}
         Zahlenlotto 6 aus 49:\\
         $A:=\lb\text{1. gezogene Zahl ist gerade}\rb\\
@@ -1441,9 +1445,8 @@ Ein stetiges Wahrscheinlichkeitsmaß $\p$ lässt sich eindeutig von $\E$ auf
             m=3 & i_1=1 & i_2=2 & i_3=3 &
                 \p(A_1\cap A_2\cap A_3)=\p(A_1)\cdot\p(A_2)\cdot\p(A_3)\\
         \end{array}\right\{$ 
-        \begin{minipage}[c]{2.6cm}
-            alle müssen erfüllt sein, keine folgt aus der anderen!            
-        \end{minipage}
+            (*)\\[0.2cm]
+        (*) alle müssen erfüllt sein, keine folgt aus der anderen!
     \end{Bsp}
     \begin{Bsp}
         2-faches Würfeln:\\
@@ -1503,7 +1506,8 @@ $\omega_j\in\lb0,1\rb$ sind, und $\Omega=\lb0,1\rb^n\qquad\A=\PR(\Omega)$
 
     \begin{Bsp}[Bernoulli-Schema für $p>\frac{1}{2}$]
       Ist eines der Teilergebnisse wahrscheinlicher als das andere
-      ($p>\frac{1}{2}$), wird das Ereignis $(1,\ldots,1)$
+      ($p>\frac{1}{2}$), wird das Ereignis \linebreak[4]
+      $(1,\ldots,1)$
       wahrscheinlicher als das Ereignis $(0,\ldots,0)$ und $\p$ ist keine
       Gleichverteilung!
 
@@ -1521,12 +1525,14 @@ $\omega_j\in\lb0,1\rb$ sind, und $\Omega=\lb0,1\rb^n\qquad\A=\PR(\Omega)$
     Probe: $\p$ ist Wahrscheinlichkeitsmaß
     \begin{enumerate}
         \item{$p^k(1-p)^{n-k}\geq 0$}
-        \item{$\sum\limits_{\omega\in\mathbb{R}}p(\lb\omega\rb)\stackrel{!}{=}1
-            =\sum\limits_{k=0}^n\sum\limits_{\omega:\omega_1+,\ldots,+\omega_n=k}
-            \underbrace{p(\lb\omega\rb)}_{p^k(1-p)^{k-n}}
-            =\sum_{k=0}^np^k(1-p)^{n-k}\underbrace
+        \item{\begin{eqnarray*}
+              \sum\limits_{\omega\in\mathbb{R}}p(\lb\omega\rb)\stackrel{!}{=}1
+            &=&\sum\limits_{k=0}^n\sum\limits_{\omega:\omega_1+,\ldots,+\omega_n=k}
+            \underbrace{p(\lb\omega\rb)}_{p^k(1-p)^{k-n}}\\
+            &=&\sum_{k=0}^np^k(1-p)^{n-k}\underbrace
             {\sharp\lb\omega:\omega_1+,\ldots,+\omega_n=k\rb}_{\binom{n}{k}}\\
-            =\sum_{k=0}^n\binom{n}{k}p^k(1-p)^{n-k}=(p+(1-p))^n=1$}
+            &=&\sum_{k=0}^n\binom{n}{k}p^k(1-p)^{n-k}=(p+(1-p))^n=1
+            \end{eqnarray*}}
     \end{enumerate}
     $A:=\lb\text{n-ter Versuch} = 1\rb\subseteq\lb0,1\rb^n\\
     A=\lb(\omega_1,\ldots,\omega_{n-1},1):\omega_j\in\lb0,1\rb\rb\\$
@@ -1544,7 +1550,7 @@ $\omega_j\in\lb0,1\rb$ sind, und $\Omega=\lb0,1\rb^n\qquad\A=\PR(\Omega)$
     \end{align*}
     $\p(\omega_1=\stackrel{0}{1},\ldots,\omega_n=\stackrel{0}{1})
     =\p(\omega_1=\stackrel{0}{1})\cdot\ldots\cdot\p(\omega_n=\stackrel{0}{1})$\\
-    unabhängig von Ereignissen, deren Eintreten nur vom j-ten Versuch abhängt.
+    unabhängig von Ereignissen, deren Eintreten nur vom j-ten Versuch abhängt.\\
     \begin{Bsp}.\\
         $\left.\begin{array}{l}
             A=\lb\text{2. Versuch 0}\rb\\
@@ -1567,7 +1573,7 @@ $\omega_j\in\lb0,1\rb$ sind, und $\Omega=\lb0,1\rb^n\qquad\A=\PR(\Omega)$
     \index{Geometrische Verteilung|(}
     Eins erscheint mit Wahrscheinlichkeit $p$, Null mit Wahrscheinlichkeit $1-p$\\
     Gesucht ist $\p($Im $(k+1)$-ten Versuch erscheint erstmals eine Eins)\\
-    Wir führen Hilfsraum ein:
+    Wir führen Hilfsraum ein:\\
     \[\Omega=\lb\omega:=(\omega_1,\omega_2,\ldots),\omega_j\in\lb0,1\rb\rb\]
     \[A=\lb\omega:\omega_1=a_1,\ldots,\omega_n=a_n,\omega_{n+1} \text{ beliebig}\rb
     \]für vorgegebene $a_1,\ldots,a_n \in \lb0,1\rb$
@@ -1606,7 +1612,7 @@ $\omega_j\in\lb0,1\rb$ sind, und $\Omega=\lb0,1\rb^n\qquad\A=\PR(\Omega)$
     \index{Geometrische Verteilung|)}
 \section{Verteilungsfunktion}
     $\p$ sei ein Wahrscheinlichkeitsmaß auf $\mathbb{R}$ (besser $\Ll(\mathbb{R})$),
-    stetig oder diskret
+    stetig oder diskret\\
     \begin{Def}
         Die Funktion $F:\mathbb{R}\to\mathbb{R}$ mit 
         \[ F(t):=\p((-\infty,t]),\quad t\in\mathbb{R} \]
