Fehler korrigiert, nach Hinweisen von Adi (http://idj.ath.cx/viewtopic.php?p=7230#7230)
git-svn-id: https://svn.lug-jena.de/uni-skripte@220 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik/chapter3.tex
+++ b/linde-stochastik/chapter3.tex
@@ -61,7 +61,7 @@
 	\[\mathbb{V}S_n=n\mathbb{V}\X_1=n\cdot\sigma^2\]
 	\[\mathbb{E}(\frac{S_n}{n})=a;\qquad
 		\mathbb{V}(\frac{S_n}{n})=\frac{1}{n}\mathbb{V}(S_n)=\frac{\sigma^2}{n}\]
-	\[\to\p((\frac{S_n}{n}-a)\geq\varepsilon)\leq
+	\[\to\p(|\frac{S_n}{n}-a|\geq\varepsilon)\leq
 		\frac{\mathbb{V}S_n}{\varepsilon^2}
 		=\frac{1}{n}\frac{\sigma^2}{\epsilon^2}\to_{n\to\infty}0\]
 		
@@ -111,15 +111,15 @@
 	Relative Häufigkeiten konvergieren gegen die Wahrscheinlichkeiten des
 	Eintretens\\
 	
-	\begin{Bsp}
-		Würfel n mal\\
-		$r_n:=\frac{1}{n}\cdot\sharp\lb j\leq n:\text{ j-te
-		Wurf}=6\rb\quad\to\quad\p(|r_n-\frac{1}{6}|\geq\varepsilon)
-		\leq\frac{\frac{5}{36}}{n\varepsilon^2}$\\
-		$n=10000,\quad\varepsilon=0.01\quad\to\quad
-		\p(|r_n-\frac{ 1}{6}|\geq 0.01)\leq \frac{5}{36}=0.13\overline{8}$\\
-		$1-\p(0.15\overline{6}\leq r_n\leq 0.17\overline{6}=$
-	\end{Bsp}
+	%\begin{Bsp}
+	%	Würfel n mal\\
+	%	$r_n:=\frac{1}{n}\cdot\sharp\lb j\leq n:\text{ j-te
+	%	Wurf}=6\rb\quad\to\quad\p(|r_n-\frac{1}{6}|\geq\varepsilon)
+	%	\leq\frac{\frac{5}{36}}{n\varepsilon^2}$\\
+	%	$n=10000,\quad\varepsilon=0.01\quad\to\quad
+	%	\p(|r_n-\frac{ 1}{6}|\geq 0.01)\leq \frac{5}{36}=0.13\overline{8}$\\
+	%	$\to 1-\p(0.15\overline{6}\leq r_n\leq 0.17\overline{6}=$ %was kommt da hin?
+	%\end{Bsp}
 	
 \section*{Starkes Gesetz der großen Zahlen}
 
@@ -197,13 +197,13 @@
 			\[\p(\alpha\leq\frac{S_n}{\sqrt{\frac{10^6\cdot 10^{-4}}{12}}}\leq
 			\beta)\approx\frac{1}{\sqrt{2\pi}}\int\limits_\alpha^\beta
 			e^{-\frac{x^2}{2}}\;dx\]
-			$\p(\alpha\frac{10}{\sqrt{12}}\leq S_n\leq\beta\frac{10}{\sqrt{12}}$\\
+			$\p(\alpha\frac{10}{\sqrt{12}}\leq S_n\leq\beta\frac{10}{\sqrt{12}})$\\
 			$\p($Ein Euro oder mehr Verlust$)\to\beta=-\frac{\sqrt{12}}{10},
 			\quad \alpha=-\infty\\
 			\to \approx 0.364517\ldots$\\
-			2 Euros $\approx 0.149349$\\
+			2 Euro $\approx 0.149349$\\
 			$\vdots$\\
-			10 Euros $\approx 0.00026603$\\}
+			10 Euro $\approx 0.00026603$\\}
 		\item{\underline{Zufällige Irrfahrt}\\
 			$S_n$ - Ort nach n Schritten, d.h. Mögliche Werte:
 			$-n,-n+2,\ldots,n-2,n$\\
