--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -1918,13 +1918,13 @@ gezogen werden.
   \#\Omega=2^n$. Wir betrachten das Ereignis $k$-mal wird Zahl
   geworfen. Dies entspricht $\{[\omega_1,\ldots,\omega_n]\in\Omega|
   k=\sum_{i=1}^n \omega_i\}=A_{k,n}^{oWoR}\Rightarrow
-  P("`A_k"')=\frac{\#A_k}{\#\Omega}=\frac{\binom{n}{k}}{2^n}$.
+  P("`A_k``)=\frac{\#A_k}{\#\Omega}=\frac{\binom{n}{k}}{2^n}$.%"'
 
   Das Ereignis $B_k$ entspricht der Aussage "`beim $k$-ten Wurf wird
   erstmalig Zahl geworfen"':
   \[B_k=\{[\omega_1,\ldots,\omega_n]\in\Omega| \omega_1, \ldots,
   \omega_{k-1}, \omega_k=1\}\]
-  \[P("`B_k"')=\frac{\# B_k}{\#\Omega}=\frac{2^{n-k}}{2^n}=2^{-k}\]
+  \[P("`B_k``)=\frac{\# B_k}{\#\Omega}=\frac{2^{n-k}}{2^n}=2^{-k}\]%"'
 \end{beispiel}
 
 
@@ -2093,7 +2093,7 @@ von $(1-p)\sum_{k=0}^9 p^k=(1-p)\frac{(1-p^9)}{(1-p)}=1-p^9\approx
   Will man nun bei beiden Beispielen versuchen, nach dem bisher
   gelernten die Wahrscheinlichkeit zu errechnen, wird man sehr schnell
   auf Probleme stossen. So ist im Beispiel der Genetik
-  $P("`k\text{-mal Erfolg}"')=\binom{n}{k} p^k (1-p)^{n-k}=
+  $P("`k\text{-mal Erfolg}``)=\binom{n}{k} p^k (1-p)^{n-k}= %"'
   \binom{100000000}{25} p^{25} (1-p)^{\approx
     100000000}\approx\infty\cdot 0$.
 \end{beispiel}
@@ -2567,8 +2567,8 @@ der Statistik ist die Bestimmung von $P_\xi$.
 
 \begin{remark}
   Schreibweise: $F_\xi:= F_{P_\xi}$ und $P(\xi^{-1}(A))=: P("`\xi\in
-  A"') := P(\{\omega\in\Omega| \xi(\omega)\in A\}) \Rightarrow
-  F_\xi(x) = P("`\xi\in(-\infty,x)"')=P("`\xi< x"')$
+  A``) := P(\{\omega\in\Omega| \xi(\omega)\in A\}) \Rightarrow
+  F_\xi(x) = P("`\xi\in(-\infty,x)``)=P("`\xi< x``)$ %"'
 \end{remark}
 
 
@@ -2649,8 +2649,7 @@ in $[X_i, \FX_i]$ ist.
     \begin{align*}
       P_{\overline{\xi}}(\times_{i=1}^n B_i) &=
       P(\overline{\xi_1^{-1}}(\times_{i=1}^n B_i))= P("`[\xi_1,
-      \ldots, \xi_n]\in\times_{i=1}^n B_i"')= P("`\xi_i\in B_i "')\\
-%%Probleme mit dem Ausfuehrungszeichen, wird als 1 dargestellt.
+      \ldots, \xi_n]\in\times_{i=1}^n B_i``)= P("`\xi_i\in B_i ``)\\%"'
       &=P\left(\bigcap_{i=1}^n \xi_i^{-1}(B_i)\right)= \prod_{i=1}^n
       (\xi_i^{-1}(B_i))\\
       &= \prod_{i=1}^n P_{\xi_i}(B_i)
@@ -2954,7 +2953,7 @@ und wir betrachten die Zufallsgrößen $\xi, \eta, \zeta$.
 \end{proof}
 
 \begin{satz}
-  Sei $\xi$ eine nichtnegative Zufallsgröße, d.h. $P("`\xi\geq ="') =1
+  Sei $\xi$ eine nichtnegative Zufallsgröße, d.h. $P("`\xi\geq =``) =1 %"'
   \Leftrightarrow P_\xi([0, +\infty))=1$. Dann gilt:
   \[E\xi = \int_{[0, +\infty)} (1-f_\xi(x)) \ell dx\]
 \end{satz}
@@ -2981,8 +2980,8 @@ Frage ist nur unter gewissen Beschränktheitsforderungen möglich.
   \item Seien $E\xi_1, E\xi_2$ endlich. Dann folgt: $E(a_1\xi_1 +
     a_2\xi_2) = a_1E\xi_1 + a_2E\xi_2$ mit $a_1, a_2\in\R$.
   \item Sei $\xi=\chi_A, A\in\CF\Rightarrow E\xi=P(A)$
-  \item Sei $P("`\xi=c"')=1\Rightarrow E\xi=c$
-  \item Sei $P("`a\leq \xi \leq b"')=1 \Rightarrow a\leq E\xi\leq b$
+  \item Sei $P("`\xi=c``)=1\Rightarrow E\xi=c$ %"'
+  \item Sei $P("`a\leq \xi \leq b``)=1 \Rightarrow a\leq E\xi\leq b$ %"'
   \end{enumerate}
 \end{satz}
 \begin{proof}
@@ -2990,7 +2989,7 @@ Frage ist nur unter gewissen Beschränktheitsforderungen möglich.
   \item $E(a_1\xi_1+a_2\xi_2) = \int (a_1\xi_1+ a_2\xi_2) dP =
     a_1\int \xi_1dP+ a_2\int \xi_2dP= a_1E\xi_1+a_2E\xi_2$
   \item $E\chi_A= \int\chi_A dP=P(A)$
-  \item $P("`\xi=c"')=1\Rightarrow P_\xi=\delta_c$\\
+  \item $P("`\xi=c``)=1\Rightarrow P_\xi=\delta_c$\\ %"'
     Nach Satz~\ref{satz:zgreew-41} folgt nun $E\xi= \int x P_\xi(dx)
     =\int x \delta_c(dx)$ und letzteres ist ein Integral bei diskreten
     Maßen. Damit ergibt sich nach Satz~\ref{satz:542}, dass die letzte
@@ -2999,7 +2998,7 @@ Frage ist nur unter gewissen Beschränktheitsforderungen möglich.
                                 %nicht eigentlich f(_c_) sein?
     Noch allgemeiner formuliert: $\int f(x) \sum_{k}
     a_k\delta_{\omega_k} (dx)= \sum_k a_k f(\omega_k)$.
-  \item $P("`a\leq \xi\leq b"')=1 \Rightarrow P_\xi([a,b])=1
+  \item $P("`a\leq \xi\leq b``)=1 \Rightarrow P_\xi([a,b])=1 %"'
     \Rightarrow E\xi=\int x P_\xi(dx)= \int_{[a,b]} xP_\xi(dx) \geq
     \int_{[a,b]} aP_\xi(dx) = aP([a,b])=a$
   \end{enumerate}
@@ -3079,7 +3078,8 @@ Zufallsgrößen $\xi, \eta$.
   \begin{enumerate}[a)]
   \item $D\xi\geq 0$
   \item $D\xi=0\Leftrightarrow
-    P_\xi=\delta_{E\xi}$. D.h. $P("`\xi=c"') =1$, also Determinismus.
+    P_\xi=\delta_{E\xi}$. D.h. $P("`\xi=c``) =1$, %"'
+    also Determinismus.
   \item $D\xi$ endlich $\Leftrightarrow E\xi^2$ endlich. In diesem
     Fall gilt $D\xi=E\xi^2-(E\xi)^2$
   \item $D(c_1\xi+c_2)=c_1^2D\xi$ mit $c_1, c_2\in\R$
@@ -3094,8 +3094,8 @@ Zufallsgrößen $\xi, \eta$.
     \begin{itemize}
     \item $P_\xi= \delta_{E\xi}\Rightarrow D\xi= \int(x-E\xi)^2 P_\xi
       (dx)= (E\xi-E\xi)^2=0$
-    \item $E(\xi-E\xi)^2=0 \Rightarrow P("`(\xi-E\xi)^2=0"')=1=
-      P("`\xi- E\xi"')$
+    \item $E(\xi-E\xi)^2=0 \Rightarrow P("`(\xi-E\xi)^2=0``)=1= %"'
+      P("`\xi- E\xi``)$ %"'
     \end{itemize}
   \item $D\xi= E(\xi-E\xi)^2= E(\xi)^2-e\xi E\xi+(E\xi)^2)= E\xi^2 -
     2E\xi E\xi + (E\xi)^2= E\xi^2- 2(E\xi)^2+(E\xi)^2= E\xi^2-(E\xi)^2$
@@ -3241,7 +3241,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   Sei $\xi\geq 0$ eine Zufallsgröße\footnote{Damit existiert $\int\xi
     d\mu$ nach der Definition zweiter Stufe immer.} und $a>0$ eine
   reelle Zahl. Dann gilt:
-  \[E\xi\geq aP("`\xi\geq a"')= aP_\xi([a, +\infty])=a(1-F_\xi(a))\]
+  \[E\xi\geq aP("`\xi\geq a``)= aP_\xi([a, +\infty])=a(1-F_\xi(a))\] %"'
 \end{satz}
 \begin{proof}
   Sei $\xi\geq 0$. Dann ist $\xi(\omega)\geq
@@ -3250,23 +3250,23 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   das Integral monoton ist, folgt $E\xi\geq E(a\chi_{\{\hat{\omega} |
     \xi(\hat{\omega})\geq a\}}) = aE\chi_{\{\hat{\omega} |
     \xi(\hat{\omega})\geq a\}}=
-  aP(\{\hat{\omega}|\xi(\hat{\omega})\geq a)= aP("`\xi\geq a"')$.
+  aP(\{\hat{\omega}|\xi(\hat{\omega})\geq a)= aP("`\xi\geq a``)$. %"'
 \end{proof}
 
 \begin{satz}[Tschebyscheffsche Ungleichung]
   \label{satz:tscheby}
   Sei $\eta$ eine Zufallsgröße mit endlichem Erwartungswert. Dann
   existiert $D\eta$ und es gilt:
-  \[P("`\lvert\eta-E\eta\rvert\geq\varepsilon"')\leq\frac{D\eta}{\varepsilon^2}
+  \[P("`\lvert\eta-E\eta\rvert\geq\varepsilon``)\leq\frac{D\eta}{\varepsilon^2} %"'
   \qquad \varepsilon> 0\]
 \end{satz}
 \begin{proof}
   Zum Beweis wird der Satz~\ref{satz:markoff} für folgenden
   Spezialfall angewendet. Wir setzen $\xi:=(\eta-E\eta)^2\geq 0$ und
   $a:=\varepsilon^2$. Dann ist klar, dass $E\xi=D\eta$ gilt. Dann
-  ergibt sich: $D\eta=E\xi\geq aP("`\xi\geq a"')= \varepsilon^2
-  P("`(\eta-E\eta)^2 \geq\varepsilon^2"')= \varepsilon^2
-  P("`\lvert\eta-E\eta\rvert \geq\varepsilon"')$.
+  ergibt sich: $D\eta=E\xi\geq aP("`\xi\geq a``)= \varepsilon^2
+  P("`(\eta-E\eta)^2 \geq\varepsilon^2``)= \varepsilon^2
+  P("`\lvert\eta-E\eta\rvert \geq\varepsilon``)$. %"'
 \end{proof}
 
 \begin{satz}
@@ -3274,7 +3274,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   Seien $\xi_1,\ldots,\xi_n$ eine Folge unabhängiger Zufallsgrößen mit
   $E\xi_i=a, D\xi_i=\delta^2$ für $i=1,\ldots, n$. Dann gilt:
   \[P\left("`\lvert\frac{1}{n}\sum_{i=1}^n \xi_i-a\rvert
-    \geq\varepsilon"'\right)\leq \frac{\delta^2}{n\varepsilon^2}\qquad
+    \geq\varepsilon``\right)\leq \frac{\delta^2}{n\varepsilon^2}\qquad %"'
     \varepsilon > 0\]
 \end{satz}
 \begin{proof}
@@ -3283,12 +3283,12 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   \begin{gather*}
     \Rightarrow E\eta = E\left(\nicefrac{1}{n}\sum_i \xi_i\right)=
     \nicefrac{1}{n} \sum_i E\xi_i = a\nicefrac{1}{n}n\\
-    D\eta= D\left(\nicefrac{1}{n}\sum_i \xi_i\left) =
+    D\eta= D\left(\nicefrac{1}{n}\sum_i \xi_i\right) =
     \nicefrac{1}{n^2} \sum_i D\xi_i = \nicefrac{1}{n^2} n\sigma^2
     = \frac{\sigma^2}{n}\\
     \Rightarrow P\left("`\lvert\nicefrac{1}{n}\sum\xi_i-a\rvert\geq
-      \varepsilon"'\right) =P("`\lvert\eta-E\eta\rvert\geq
-    \varepsilon"')
+      \varepsilon``\right) =P("`\lvert\eta-E\eta\rvert\geq
+    \varepsilon``) %"'
     \leq=\frac{D\eta}{\varepsilon^2}=\frac{\sigma^2}{n\varepsilon^2}
   \end{gather*}
 \end{proof}
@@ -3306,7 +3306,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten Zufallsgrößen
   Aussage, dass ich gewinne.
 \end{itemize}
 Aus Satz~\ref{satz:563} folgt nun: $P(A)=P("`\lvert \nicefrac{1}{n}
-\sum \xi_i-a\rvert\geq\varepsilon"')\leq
+\sum \xi_i-a\rvert\geq\varepsilon``)\leq %"'
 \frac{\sigma^2}{n\varepsilon^2}=
 \frac{\nicefrac{1}{4}}{250\cdot \nicefrac{1}{10}^2}= \frac{1}{10}$.
 
@@ -3342,7 +3342,7 @@ Folgende Ansprüche werden formuliert:
 \item Vorgabe eines Sicherheitsniveaus $s<1$ mit
   \begin{align}
     \label{eq:1}
-    P("`\lvert\eta_n-a\rvert<\varepsilon"')\geq s
+    P("`\lvert\eta_n-a\rvert<\varepsilon``)\geq s %"'
   \end{align}
 \end{enumerate}
 
@@ -3368,9 +3368,10 @@ die Gleichung (\ref{eq:1}) gilt. Eine mögliche Antwort isT:
 \begin{proof}
   Es folgt ein Beweis dafür, dass aus Gleichung~(\ref{eq:2}) die
   Gleichung~(\ref{eq:1}) folgt. Aus dem Satz~\ref{satz:563} folgt,
-  $P("`\lvert \eta_n-a\rvert <\varepsilon"')=1- P("`\lvert
+  $P("`\lvert \eta_n-a\rvert <\varepsilon``)=1- P("`\lvert
   \underbrace{\eta_n}_{\nicefrac{1}{n} \sum\xi_i} -a\rvert\geq
-  \varepsilon"')$. Nunmehr sich hier wieder Satz~\ref{satz:563}
+  \varepsilon``)$. %"'
+  Nunmehr sich hier wieder Satz~\ref{satz:563}
   anwenden und die obige Gleichung ist größergleich
   $1-\frac{\sigma^2}{n\varepsilon^2}\geq
   s$. D.h. Gleichung~(\ref{eq:1}) wird realisiert, wenn $s\leq 1-
@@ -3427,8 +3428,61 @@ werden: $P("`lvert \nicefrac{1}{n}\sum\xi_i-P_{\eta_1}(A)\rvert\geq
 
 \paragraph{andere Konvergenzarten}
 
+Wir betrachten die schwache Konvergenz. Dazu sei $(Q_n)_{n=1}^\infty$
+und Q ein Wahrscheinlichkeitsmaß auf $[\R,\FB]$. Man sagt, $(Q_n)$
+konvergiert schwach gegen $Q$, wenn gilt:
+\[\int fdQ_n \xrightarrow{n\rightarrow\infty} \int fdQ\]
+Dabei ist $f$ eine Abbildung von $\R$ nach $\R$, die stetig und
+beschränkt ist. Die Schreibweise dafür, dass $(Q_n)$ schwach gegen $Q$
+konvergiert, ist $Q_n\Rightarrow Q$.
 
+\begin{satz*}
+  \[Q_n\Rightarrow Q\Leftrightarrow F_{Q_n}(x)\rightarrow F_Q(x)\]
+für alle Stetigkeitspunkte von $F_Q$.
+\end{satz*}
 
+\begin{satz*}
+  \[\eta_n\xrightarrow{P} \Rightarrow P_{\eta_n}\Rightarrow P_\eta\]
+\end{satz*}
+
+\begin{remark}
+  Die Umkehrung ist im Allgemeinen falsch. Denn sei $(\eta_n)$ iid,
+  $P_\eta = P_{\eta_1}, \eta, \eta_n$ unabhängig. Dann folgt, dass
+  $P_{\eta_n} =P_\eta\Rightarrow P_{\eta_1}\Rightarrow P_n$. Aber
+  $P("`\lvert \eta_n-\eta\rvert\geq\varepsilon``)$%"'
+  ist konstant und ungleich 0. Außer fpr den Fall, dass $P_\eta,
+  P_{\eta_n}$ Diracmaße sind.
+\end{remark}
+
+\begin{satz*}
+  Sei $P_\eta=\delta_a$. Dann folgt:
+  \[\eta_n\xrightarrow{P} \eta \Leftrightarrow P_{\eta_n}\Rightarrow P_\eta\]
+\end{satz*}
+
+\begin{definition}
+  Sei $(\eta)_{n=1}^\infty, \eta$ eine zufällige Größe. Dann
+  konvergiert $(\eta_n)_{n=1}^\infty$ mit Wahrscheinlichkeit 1 gegen
+  $\eta$, wenn gilt\footnote{Schreibweise: $\eta_n\xrightarrow{P=1} \eta$}:
+  \[P("`\lim \eta_n =\eta``)=1\]%"'
+\end{definition}
+
+\begin{satz*}
+  \[\eta_n\xrightarrow{P=1} \eta \Rightarrow \eta_n\xrightarrow{P} \eta\]
+\end{satz*}
+
+\begin{satz}[Starkes Gesetz der großen Zahlen]
+  Sei $(\xi_k)_{1}^n$ eine Folge unabhängiger identisch verteilter
+  Zufallsgrößen mit endlichem Erwartungswert. Dann gilt:
+  \[\frac{1}{n} \sum_{k=1}^n \xi_k \xrightarrow{P=1} E\xi_1\]
+\end{satz}
+%Beweis muss ergänzt werden
+
+\begin{satz}[Satz von Weierstraß]
+  Sei $f:[0,1]\rightarrow \R$ stetig. Weiter sei $b_n^f(x):=
+  \sum_{k=0}^n f(\frac{n}{k})\binom{n}{k}x^k(1-x)^{n-k}$ ein
+  Bernoullipolynom mit $x\in[0,1]$. Dann gilt:
+  \[\limn b_n^f(x)=f(x)\]
+\end{satz}
 
 
 
