--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -171,7 +171,7 @@ Punkte (1) und (2) gelten und zusätzlich\\
     \item Denn sei $A\in\CF$. Dann ist zu zeigen, dass entweder $A^c\in\CF$
       oder $(A^c)^c$ endlich ist. Falls $A^c$ endlich, ist nichts weiter
       zu zeigen. Wenn $A$ endlich ist, dann ist nichts zu $A^c$
-      ausgesagt. Allerdings ist $(a^c)^c=A$. Somit gilt auch Eigenschaft 2.
+      ausgesagt. Allerdings ist $(A^c)^c=A$. Somit gilt auch Eigenschaft 2.
     \item Für $A,B\in\CF$ ist zu zeigen, dass $(A\cup B)$ endlich
       bzw. $(A\cup B)^c\in\CF$ endlich sind.
       \begin{enumerate}[1. F{a}ll]
@@ -3068,7 +3068,7 @@ Sei $\ofp$ ein Wahrscheinlichkeitsraum. Wir betrachten die
 Zufallsgrößen $\xi, \eta$.
 
 \begin{definition}
-  Sie $\xi$ eine Zufallsgröße mit \emph{endlichem} Erwartungswert.
+  Sei $\xi$ eine Zufallsgröße mit \emph{endlichem} Erwartungswert.
   \[D\xi := E(\xi-E\xi)^2\]
   heißt \emph{Varianz\index{Varianz}} von $\xi$. Weiterhin heißt
   $\sqrt{D\xi}$ \emph{Standardabweichung\index{Standardabweichung}}.
